Swagger for users added
